Add scripts for auto-committing and watching .usdz models in package.json and update README with usage instructions

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "commit-models": "node scripts/commit-models.js",
+    "watch-models": "node scripts/watch-models.js"
   },
   "dependencies": {
     "next": "^14.2.0",
