--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "watch-models": "node scripts/watch-models.js"
   },
   "dependencies": {
+    "@google/model-viewer": "^3.4.0",
     "next": "^14.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
