Enhance upload functionality and update documentation
Added an upload section to the app, allowing users to upload .usdz files directly to GitHub if the appropriate GITHUB_TOKEN permissions are set. Updated README to reflect changes in upload process and clarified GITHUB_TOKEN usage. Modified .env.example to include new token requirements for uploads. Improved styles in globals.css for the upload interface.

--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,6 @@ GITHUB_PATH=models
 # Branch to use for raw file URLs
 GITHUB_BRANCH=main
 
-# Optional: GitHub token for higher API rate limits (no auth needed for public repos)
+# Optional: GitHub token for API rate limits and for Upload to GitHub (read: list; write: upload)
+# For upload, use a fine-grained or classic token with contents: read and contents: write.
 # GITHUB_TOKEN=ghp_...
