--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,5 @@ GITHUB_PATH=models
 # Branch to use for raw file URLs
 GITHUB_BRANCH=main
 
-# Optional: GitHub token for API rate limits and for Upload to GitHub (read: list; write: upload)
-# For upload, use a fine-grained or classic token with contents: read and contents: write.
+# Optional: GitHub token for higher API rate limits (no auth needed for public repos)
 # GITHUB_TOKEN=ghp_...
