--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
+# Storage provider: "github" (default) or "s3"
+# STORAGE_PROVIDER=github
+
+# --- GitHub (when STORAGE_PROVIDER=github or unset) ---
 # GitHub repo (owner/repo) to list .usdz files from
 GITHUB_REPO=hamzashaebi/sharingAR
 
@@ -9,3 +13,12 @@ GITHUB_BRANCH=main
 
 # Optional: GitHub token for higher API rate limits (no auth needed for public repos)
 # GITHUB_TOKEN=ghp_...
+
+# --- S3-compatible (when STORAGE_PROVIDER=s3) ---
+# Use with AWS S3, Cloudflare R2, MinIO, etc.
+# S3_BUCKET=your-bucket
+# S3_PREFIX=models
+# S3_REGION=us-east-1
+# S3_ENDPOINT=https://...   # optional; for R2/MinIO custom endpoint
+# S3_ACCESS_KEY_ID=...
+# S3_SECRET_ACCESS_KEY=...
