Add cloud storage support and update dependencies
Enhanced the application to support S3-compatible cloud storage (AWS S3, Cloudflare R2, MinIO) for serving .usdz files. Updated the README to include cloud storage configuration details and modified the .env.example file to reflect new environment variables. Updated package.json and package-lock.json to include the @aws-sdk/client-s3 dependency, facilitating cloud storage interactions. Refactored relevant components to conditionally load models from cloud storage or GitHub based on configuration.

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,14 @@ GITHUB_BRANCH=main
 
 # Optional: GitHub token for higher API rate limits (no auth needed for public repos)
 # GITHUB_TOKEN=ghp_...
+
+# --- Cloud storage (S3-compatible: AWS S3, Cloudflare R2, MinIO) ---
+# When set, models are listed and served from the bucket instead of GitHub.
+# Bucket layout: put .usdz files under prefix/private/ and prefix/public/ (e.g. models/private/*.usdz).
+# CLOUD_STORAGE_BUCKET=your-bucket-name
+# CLOUD_STORAGE_ACCESS_KEY_ID=...
+# CLOUD_STORAGE_SECRET_ACCESS_KEY=...
+# CLOUD_STORAGE_REGION=auto
+# CLOUD_STORAGE_PATH=models
+# For Cloudflare R2: set endpoint (replace ACCOUNT_ID with your R2 account id)
+# CLOUD_STORAGE_ENDPOINT=https://ACCOUNT_ID.r2.cloudflarestorage.com
