Update .env.example and README for Cloudflare R2 support
Refined the .env.example file to clarify environment variables for Cloudflare R2 integration, including updated comments and structure for bucket layout. Enhanced the README to provide detailed setup instructions for using Cloudflare R2 as an S3-compatible storage solution, ensuring users have clear guidance on configuration and usage.

--- a/.env.example
+++ b/.env.example
@@ -10,13 +10,15 @@ GITHUB_BRANCH=main
 # Optional: GitHub token for higher API rate limits (no auth needed for public repos)
 # GITHUB_TOKEN=ghp_...
 
-# --- Cloud storage (S3-compatible: AWS S3, Cloudflare R2, MinIO) ---
-# When set, models are listed and served from the bucket instead of GitHub.
-# Bucket layout: put .usdz files under prefix/private/ and prefix/public/ (e.g. models/private/*.usdz).
-# CLOUD_STORAGE_BUCKET=your-bucket-name
-# CLOUD_STORAGE_ACCESS_KEY_ID=...
-# CLOUD_STORAGE_SECRET_ACCESS_KEY=...
+# --- Cloudflare R2 (S3 API) ---
+# When set, models are listed and served from your R2 bucket instead of GitHub.
+# Get S3 API credentials: R2 dashboard → Manage R2 API Tokens → Create API token (Object Read & Write).
+# Bucket layout: create folders private/ and public/ in the bucket; put .usdz in models/private/ and models/public/
+# (or set CLOUD_STORAGE_PATH to match your prefix).
+#
+# CLOUD_STORAGE_BUCKET=your-r2-bucket-name
+# CLOUD_STORAGE_ACCESS_KEY_ID=your_r2_access_key_id
+# CLOUD_STORAGE_SECRET_ACCESS_KEY=your_r2_secret_access_key
 # CLOUD_STORAGE_REGION=auto
+# CLOUD_STORAGE_ENDPOINT=https://YOUR_ACCOUNT_ID.r2.cloudflarestorage.com
 # CLOUD_STORAGE_PATH=models
-# For Cloudflare R2: set endpoint (replace ACCOUNT_ID with your R2 account id)
-# CLOUD_STORAGE_ENDPOINT=https://ACCOUNT_ID.r2.cloudflarestorage.com
