--- a/.env.example
+++ b/.env.example
@@ -16,9 +16,18 @@ GITHUB_BRANCH=main
 
 # --- S3-compatible (when STORAGE_PROVIDER=s3) ---
 # Use with AWS S3, Cloudflare R2, MinIO, etc.
-# S3_BUCKET=your-bucket
-# S3_PREFIX=models
-# S3_REGION=us-east-1
-# S3_ENDPOINT=https://...   # optional; for R2/MinIO custom endpoint
-# S3_ACCESS_KEY_ID=...
-# S3_SECRET_ACCESS_KEY=...
+
+# --- Cloudflare R2 (S3 API) ---
+# Set STORAGE_PROVIDER=s3 and use R2 S3 API credentials.
+# Get credentials: R2 dashboard → Manage R2 API Tokens → Create API token (Object Read & Write).
+# Account ID is in the R2 dashboard sidebar; endpoint = https://<ACCOUNT_ID>.r2.cloudflarestorage.com
+# Bucket layout: put .usdz files under <S3_PREFIX>/private/ and <S3_PREFIX>/public/.
+# Example: S3_PREFIX=view-byhamza-xyz/models → view-byhamza-xyz/models/private/ and view-byhamza-xyz/models/public/
+#
+# STORAGE_PROVIDER=s3
+# S3_BUCKET=your-r2-bucket-name
+# S3_ACCESS_KEY_ID=your_r2_access_key_id
+# S3_SECRET_ACCESS_KEY=your_r2_secret_access_key
+# S3_REGION=auto
+# S3_ENDPOINT=https://YOUR_ACCOUNT_ID.r2.cloudflarestorage.com
+# S3_PREFIX=view-byhamza-xyz/models
