--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "dependencies": {
     "next": "^14.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@aws-sdk/client-s3": "^3.700.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
