--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "watch-models": "node scripts/watch-models.js"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.983.0",
     "next": "^14.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -19,6 +20,7 @@
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "dotenv": "^17.2.3",
     "eslint": "^8.0.0",
     "eslint-config-next": "^14.2.0",
     "typescript": "^5.0.0"
