feat: implement Vercel Blob storage for .usdz file management and enhance upload functionality
Replaced GitHub-based model management with Vercel Blob storage for improved file handling. Updated the README and .env.example to reflect new configuration requirements. Introduced an upload form for users to easily add .usdz files directly through the web interface, streamlining the process and enhancing user experience. Removed outdated scripts related to GitHub integration.

--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "commit-models": "node scripts/commit-models.js",
-    "watch-models": "node scripts/watch-models.js"
+    "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/blob": "^2.2.0",
     "next": "^14.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
