--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,2 @@
-# GitHub repo (owner/repo) to list .usdz files from
-GITHUB_REPO=hamzashaebi/sharingAR
-
-# Path inside the repo where .usdz files live
-GITHUB_PATH=models
-
-# Branch to use for raw file URLs
-GITHUB_BRANCH=main
-
-# Optional: GitHub token for higher API rate limits (no auth needed for public repos)
-# GITHUB_TOKEN=ghp_...
-
-
+# Vercel Blob read/write token (created via Vercel dashboard → Storage → Blob)
+BLOB_READ_WRITE_TOKEN=vercel_blob_rw_...
